<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KuGou</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="download">下载</string>
    <string name="add_to_playlist">添加</string>
    <string name="details">信息</string>
    <string name="share">分享</string>
    <string name="search_photo">搜图</string>
    <string name="name">歌曲名</string>
    <string name="artist">演唱者</string>
    <string name="duration">时间</string>
    <string name="album">专辑</string>
    

</resources>
