<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/music_detail"
            android:text="@string/name" />

        <TextView
            android:id="@+id/music_title"
            style="@style/music_detail"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/music_detail"
            android:text="@string/artist" />

        <TextView
            android:id="@+id/music_artist"
            style="@style/music_detail"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/music_detail"
            android:text="@string/duration" />

        <TextView
            android:id="@+id/music_duration"
            style="@style/music_detail"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/music_detail"
            android:text="@string/album" />

        <TextView
            android:id="@+id/music_album"
            style="@style/music_detail"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>