<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skin_bg_player"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/play_title_back"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:background="#00000000"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_common_title_bar_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/song_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="#00000000" />

            <TextView
                android:id="@+id/song_songer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00000000" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/play_list"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#00000000"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_current_playlist" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/play_progress_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff808080"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/play_time_begin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="0:0" />

        <SeekBar
            android:id="@+id/play_progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/play_time_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="0:0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_opera_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff808080"
        android:orientation="vertical"
        android:gravity="center_horizontal"
         >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/play_music_more"
                android:id="@+id/play_download"
                android:layout_toLeftOf="@+id/play_addlist"
                android:drawableTop="@drawable/ic_player_menu_download"
                android:text="@string/download" />
            <TextView
                style="@style/play_music_more"
                android:drawableTop="@drawable/ic_player_menu_add_to_playlist"
                android:id="@+id/play_addlist"
                android:layout_toLeftOf="@+id/play_share"
                android:text="@string/add_to_playlist" />
            <TextView
                style="@style/play_music_more"
                android:drawableTop="@drawable/ic_player_menu_share"
                android:id="@+id/play_share"
                android:layout_centerHorizontal="true"
                android:text="@string/share" />
            <TextView
                style="@style/play_music_more"
                android:drawableTop="@drawable/ic_player_menu_details"
                android:id="@+id/play_details"
                android:layout_toRightOf="@id/play_share"
                android:text="@string/details" />
            <TextView
                style="@style/play_music_more"
                android:drawableTop="@drawable/ic_player_menu_search_photo"
                android:id="@+id/play_search"
                android:layout_toRightOf="@id/play_details"
                android:text="@string/search_photo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal" >
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_player_menu_volume"
                android:contentDescription="@null"
                />
            <SeekBar 
                android:id="@+id/play_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#66ccff"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/play_model"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:background="#00000000"
            android:contentDescription="@null"
            android:onClick="onMusicClick"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_mode_all_default" />

        <ImageButton
            android:id="@+id/play_prev"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toLeftOf="@+id/play_music"
            android:background="#00000000"
            android:contentDescription="@null"
            android:onClick="onMusicClick"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_prev_default" />

        <ImageButton
            android:id="@+id/play_music"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#00000000"
            android:contentDescription="@null"
            android:onClick="onMusicClick"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_play_default" />

        <ImageButton
            android:id="@+id/play_next"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_toRightOf="@id/play_music"
            android:background="#00000000"
            android:contentDescription="@null"
            android:onClick="onMusicClick"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_next_default" />

        <ImageButton
            android:id="@+id/play_more"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20dp"
            android:background="#00000000"
            android:contentDescription="@null"
            android:onClick="onMusicClick"
            android:scaleType="fitXY"
            android:src="@drawable/ic_player_menu_default" />
    </RelativeLayout>

</LinearLayout>